- Added function to handle API results to use on page. - play.html created to handle incoming card, with some CSS prepped - three buttons generated (random order) with only 1 being the correct answer

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ bcrypt
 
 gunicorn
 # gunicorn is a python web server gateway interface HTTP server, used by Heroku to host our app
+
+requests
+# requests is a simple HTTP library which allows us to send HTTP/1.1 requests
